// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render an active button 1`] = `
<button
  class="button active"
  type="button"
/>
`;

exports[`Render button 1`] = `
<button
  class="button"
  type="button"
>
  <span
    class="label"
  >
    Click
  </span>
</button>
`;

exports[`Render button with a different size 1`] = `
<button
  class="button small"
  type="button"
/>
`;

exports[`Render button with a prepended icon 1`] = `
<button
  class="button"
  type="button"
>
  <span
    aria-label="fa-trash-o"
    class="fa fa-trash-o icon"
  />
</button>
`;

exports[`Render button with dropdown indicator 1`] = `
<button
  class="button"
  type="button"
>
  <span
    aria-label="su-angle-down"
    class="su-angle-down dropdownIcon"
  />
</button>
`;

exports[`Render button with value 1`] = `
<button
  class="button"
  type="button"
>
  <span
    class="label"
  >
    Click
  </span>
</button>
`;

exports[`Render button without text 1`] = `
<button
  class="button"
  type="button"
/>
`;

exports[`Render disabled button 1`] = `
<button
  class="button"
  disabled=""
  type="button"
/>
`;

exports[`Render loading button 1`] = `
<button
  class="button"
  type="button"
>
  <div
    class="spinner loader"
    style="width:20px;height:20px"
  >
    <div
      class="doubleBounce1"
    />
    <div
      class="doubleBounce2"
    />
  </div>
  <span
    class="label"
  >
    Click
  </span>
</button>
`;

exports[`Render primary button 1`] = `
<button
  class="button primary"
  type="button"
>
  <span
    class="label"
  >
    Click
  </span>
</button>
`;

exports[`Render primary success button 1`] = `
<button
  class="button primary success"
  type="button"
>
  <span
    class="label"
  >
    Click
  </span>
</button>
`;

exports[`Render success button 1`] = `
<button
  class="button success"
  type="button"
>
  <span
    class="label"
  >
    Click
  </span>
</button>
`;
